3.0rc1
	Small documentation fix (Leena Heino)
	Fix automatic config reload
3.0a6
	Fix serious bugs in macro handling (AIDA Shinra)
	Back out race conditions fixes (too intrusive, will be back in 3.1.x)
	Fix build warning on Tru64
	Build fix on Solaris
3.0a5
	Build fix on Tru64, fix MX sync (Attila Bruncsak)
	Fix various race conditions (AIDA Shinra)
3.0a4
	IPv6 and build fixes (Hajimu UMEMOTO)
3.0a3
	Fix --disable-drac and --disable-dnsrbl (Fabien Tassin)
	Add support to use Sendmail macros in the ACL
	Remove the need of LOG_PERROR, make sure no log is missed
	Make sure -c tells what happens and return an usable exit code
3.0a2
	Documentation fix about required sendmail macros
	Missing bit in rc-redhat.sh (Jobst Schmalenbach)
	Fix bugs that prevented IPv6 addresses resolution
	Add more log output for blackist and flushaddr (Fabien Tassin)
	Allow rejecting by tempfail on blacklist configuration (Fabien Tassin)
3.0a1
	Build fix
2.1.12
	IPv6 fixes again (Hajimu UMEMOTO)
	Build fix on FreeBSD
	per-ACL SMTP error code and messages
2.1.11
	IPv6 fixes (Hajimu UMEMOTO)
	flushaddr flag for access lists, which flush an IP from the database
2.1.10
	Multi-line statement in the config file
	Fix crash when using -c and lists or acl
	Build fixes
2.1.9
	Handle FreeBSD 5.2 DNS resolver for DNSRBL (Hajimu UMEMOTO)
	Build fixes for Linux (Hajimu UMEMOTO)
	Fix uninitialized string (Hajimu UMEMOTO)
2.1.8
	acl blacklist feature
2.1.7
	Per-ACL greylisting and autowhitelisting delays
	DNSRBL support in ACL
	Report matching ACL line number in the logs
	Lists for from, rcpt, domain, netblocks and DNSRBL
2.1.6
	Make log output consistent (Fredrik Pettai)
2.1.5
	Build fix (Attila Bruncsak)
2.1.4
	Fixes to bucketed databases when using lazyaw (Ranko Zivojnovic)
	Tell local connexions are non IP instead of non IPv4 (Attila Bruncsak)
	Faster ACL code (Attila Bruncsak)
	Option to log expired entries (Jeff Rife)
	Cosmetic changes in debug logs (Fredrik Pettai)
2.1.3