@@ -1,4 +1,5 @@
 3.0rc1
+	Warn about ignored ACL lines after acl default rule
 	Small documentation fix (Leena Heino)
 	Fix automatic config reload
 3.0a6
